# framecap

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  recorder.html  region.html  settings.html  vite.config.js
.github/workflows/: release.yml
src/: editor.js  overlay.js  recorder.js  settings.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
