[package]
name = "framecap"
version = "0.1.0"
description = "Record a screen area and pull frames for sharing"
edition = "2021"

[lib]
name = "framecap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
